--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/index.css">
+  <title>JSM Studio</title>
 </head>
 <body>
-  JSM Studio
+  <div id="app"></div>
+  <script src="https://x-titan.github.io/xstudio/index.js" type="module" defer></script>
+  <script src="./js/index.js" type="module" defer></script>
 </body>
 </html>
