--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="aXIBa9oc3Vn1FbZSgmYEoFMqbutaT9WGI9Gtr85l8t0"/>
   <link rel="stylesheet" href="./css/index.css">
   <title>JSM Studio</title>
 </head>
